--- a/FlappyFabian/app/src/main/res/values/strings.xml
+++ b/FlappyFabian/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="StartGame">Start game</string>
     <string name="HelpMenu">Help!!</string>
     <string name="SettingsButn">Game settings</string>
+    <string name="title_activity_game">Game</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_help">Help</string>
 </resources>
