--- a/FlappyFabian/app/src/main/res/values/strings.xml
+++ b/FlappyFabian/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Flappy Fabian</string>
-    <string name="action_settings">Settings</string>
-    <string name="StartGame">Start game</string>
-    <string name="HelpMenu">Help!!</string>
+    <string name="action_settings">SETTINGS</string>
+    <string name="StartGame">START GAME</string>
+    <string name="HelpMenu">Help</string>
     <string name="SettingsButn">Game settings</string>
     <string name="title_activity_game">Game</string>
     <string name="title_activity_settings">Settings</string>
