--- a/FlappyFabian/app/src/main/res/values/strings.xml
+++ b/FlappyFabian/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="action_settings">SETTINGS</string>
     <string name="StartGame">START GAME</string>
     <string name="HelpMenu">Help</string>
-    <string name="SettingsButn">Game settings</string>
+    <string name="SettingsButn">Settings</string>
     <string name="title_activity_game">Game</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_help">Help</string>
+    <string name="startButton">Start</string>
 </resources>
